2006-04-19  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.12.10


2006-04-17  Luc Pionchon  <luc.pionchon@nokia.com>

	* doc/hildon-libs-docs.sgml: added index for new symbols.

	
2006-04-17  Luc Pionchon  <luc.pionchon@nokia.com>

	* doc/Makefile.am (version.xml): generates version.xml
	* doc/hildon-libs-docs.sgml: added &version; entity, and display
	the version number in the doc title.
	

2006-04-17  Luc Pionchon  <luc.pionchon@nokia.com>

	Minor changes for gtk-doc
	* hildon-note.c
	* hildon-weekday-picker.h
	* hildon-name-password-dialog.c
	* hildon-calendar-popup.h
	* hildon-range-editor.h
	* hildon-volumebar-range.h
	* hildon-banner.c
	* hildon-app.c
	* hildon-time-editor.c
	* gtk-infoprint.c
	* hildon-date-editor.h


2006-04-16  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c
	(hildon_time_editor_set_show_hours) 
	(hildon_time_editor_get_show_hours): added gtk-doc tag 'Since:'


2006-04-15  Luc Pionchon  <luc.pionchon@nokia.com>

	N#22557
	* hildon-widgets/hildon-time-editor.c
	(hildon_time_editor_entry_keypress): use
	hildon_gtk_button_set_depressed, provided by osso-GTK, since
	2.6.10-1.osso4, instead of GTK private symbol
	_gtk_button_set_depressed


2006-04-15  Marius Vollmer  <marius.vollmer@nokia.com>

	From Murray Cummings (M#185 M#283), with slight changes:

	* configure.ac: Add a --rebuilds option, defaulting to yes, so we
	can disable the regeneration of hildon-libs-enum-types.[h|c], also
	based on the gnome-vfs build.

	* hildon-widgets/Makefile.am: Use glib-mkenums to generate
	hildon-libs-enum-types.[h|c], and build them, based on the
	gnome-vfs build. This adds GTypes for the enums, needed for
	accurate signal registration, needed by bindings.

	* hildon-widgets/hildon-number-editor.h: Rename the error_handler
	default signal handler to range_error, so it has the same name as
	the signal, as expected by bindings.

	* hildon-widgets/hildon-marshalers.list: Change to the now-used
	marshallers.
