@@ -665,11 +665,13 @@ hildon_window_size_allocate (GtkWidget * widget, GtkAllocation * allocation)
             alloc.y += b->top;
 
             alloc.height -= b->top;
-            if (box_alloc.height <= 0)
-                alloc.height -= b->bottom;
-            else
-                alloc.height -= (tb->top + tb->bottom);
         }
+
+        if (box_alloc.height <= 0 && 
+                !(HILDON_WINDOW (widget)->priv->fullscreen))
+            alloc.height -= b->bottom;
+        else
+            alloc.height -= (tb->top + tb->bottom);
 
         gtk_widget_size_allocate (bin->child, &alloc);
     }
